crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@shared_parent_key__deeply_nested.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/deeply_nested.json
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada",
      "review": {
        "id": "r1",
        "rating": 5,
        "product": {
          "upc": "p1",
          "price": 999,
          "name": "Widget Pro"
        },
        "body": "Amazing!"
      }
    }
  }
}
