crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@shared_parent_key__inline_fragment.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/inline_fragment.json
---
{
  "data": {
    "node": {
      "id": "1",
      "username": "ada42",
      "rating": 5,
      "name": "Ada Lovelace",
      "body": "Compelling review"
    }
  }
}
