crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@shared_parent_key__multiple_fragments.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/multiple_fragments.json
---
{
  "data": {
    "me": {
      "id": "1",
      "username": "ada42",
      "name": "Ada"
    },
    "topProduct": {
      "upc": "1",
      "reviews": [
        {
          "id": "r1"
        }
      ],
      "inStock": true
    }
  }
}
