crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@shared_parent_key__mutation.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/mutation.json
---
{
  "data": {
    "createReview": {
      "id": "100",
      "author": {
        "name": "Ada"
      },
      "body": "Great product!",
      "rating": 5
    }
  }
}
