crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@shared_parent_key__nested_mock_only.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/nested_mock_only.json
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada",
      "accountAge": 365,
      "bio": "Pioneering programmer and first computer scientist"
    }
  }
}
