crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@shared_parent_key__same_level.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/shared_parent_key/same_level.json
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Celebrity",
      "username": "celeb123",
      "reviews": [
        {
          "id": "r1",
          "body": "Great!"
        }
      ]
    }
  }
}
